[package]
name = "AntKingImage"
version = "0.1.0"
authors = ["lurui <lurui@ipfsforce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[dependencies.rusty_pool]
## 线程池
#version = "0.5.1"
#default-features = false


[dependencies]
# 镜像数据库
sled = "0.34.6"
byteorder = "1.4.3"
zerocopy = "0.3.0"

# 序列化
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"

# HTTP请求
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# 加解密
sha256 = "1.0.0"

# 进度条
indicatif = "0.15.0"



