[package]
name = "ant_king_image"
version = "0.3.3"
authors = ["lurui <lurui@ipfsforce.com>"]
edition = "2018"
description = "A Library For Download OCI Image."
repository = "https://github.com/ruilkqun/AntKingImage.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[dependencies.rusty_pool]
## 线程池
#version = "0.5.1"
#default-features = false


[dependencies]
# 镜像数据库
sled = "0.34.6"

# 序列化
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"

# HTTP请求
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# 加解密
sha256 = "1.0.0"

# 进度条
indicatif = "0.15.0"
#indicatif = { git = "https://github.com/mitsuhiko/indicatif.git", tag = "0.15.0", version =  "0.15.0" }



